--- a/MobileApp/app/package.json
+++ b/MobileApp/app/package.json
@@ -32,6 +32,7 @@
     "expo-application": "~5.3.0",
     "expo-auth-session": "~5.0.2",
     "expo-blur": "~12.4.1",
+    "expo-cli": "^6.3.10",
     "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.13",
